--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gorditas:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="/public/assets/css/styles.css">
     <title>Patria y Palabras</title>
 </head>
 <body>
@@ -69,11 +69,11 @@
     <div class="main-content">
         <div class="gradient-background"></div>
         <div class="main-background">
-            <img src="../images/pyp1.png" alt="main-image">
+            <img src="/images/pyp1.png" alt="main-image">
         </div>
 
         <div class="initial-background">
-            <img src="../images/mafalda_3.png" alt="initial-image">
+            <img src="/images/mafalda_3.png" alt="initial-image">
         </div>
         
         <div class="cloud-text">PARA QUE TODO SEA CLARO Y SIN SORPRESAS, TE RECOMENDAMOS TENER EN CUENTA LOS DISTINTOS ESTADOS EN LOS QUE PUEDE LLEGAL SEA LA SITAR TU LIBRO, CON ESTA CLASIFICACIÓN ASIGNADA. SEA CUUACIÓN ASIGNADA PARA TU LIBRO, TODOS SON LEGIBLES Y TIENEN LA CANTIDAD DE PÁGINAS COMPLETAS</div>
@@ -99,7 +99,7 @@
         </div>
     </div>
     <div class="gradient-background"></div>
-    <script type="module" src="assets/js/scripts.js"></script>
-    <script src="assets/js/submenu_function.js" defer></script>
+    <script type="module" src="/public/assets/js/scripts.js"></script>
+    <script src="/public/assets/js/submenu_function.js" defer></script>
 </body>
 </html>
