--- a/public/libros.html
+++ b/public/libros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="assets/css/libros_style.css">
+    <link rel="stylesheet" href="/public/assets/css/libros_style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gorditas:wght@700&display=swap" rel="stylesheet">
@@ -210,9 +210,9 @@
         <div class="carousel-indicators" id="carouselIndicators"></div>
         <div id="carouselCaption"></div>
     </div>
-    <script type="module" src="../firebase/firebase-config.js"></script>
-    <script type="module" src="../firebase/firebase-auth.js"></script>
-    <script type="module" src="assets/js/libros.js"></script>
-    <script src="assets/js/submenu_function.js" defer></script>
+    <script type="module" src="/firebase/firebase-config.js"></script>
+    <script type="module" src="/firebase/firebase-auth.js"></script>
+    <script type="module" src="/public/assets/js/libros.js"></script>
+    <script src="/public/assets/js/submenu_function.js" defer></script>
 </body>
 </html>
