--- a/public/new.html
+++ b/public/new.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="assets/css/new.css">
+    <link rel="stylesheet" href="/public/assets/css/new.css">
     <title>Novedades - Patria y Palabras</title>
 </head>
 <body class="main-background-new">
@@ -82,9 +82,9 @@
         <img class="modal-content" id="modalImage">
         <div id="caption"></div>
     </div>
-    <script type="module" src="../firebase/firebase-config.js"></script>
-    <script type="module" src="../firebase/firebase-auth.js"></script>
-    <script src="assets/js/new.js"></script>   
-    <script src="assets/js/submenu_function.js" defer></script>
+    <script type="module" src="/firebase/firebase-config.js"></script>
+    <script type="module" src="/firebase/firebase-auth.js"></script>
+    <script src="/public/assets/js/new.js"></script>   
+    <script src="/public/assets/js/submenu_function.js" defer></script>
 </body>
 </html>
