--- a/public/new.html
+++ b/public/new.html
@@ -82,8 +82,8 @@
         <img class="modal-content" id="modalImage">
         <div id="caption"></div>
     </div>
-    <script type="module" src="/public/firebase/firebase-config.js"></script>
-    <script type="module" src="/public/firebase/firebase-config.js"></script>
+    <script type="module" src="/firebase/firebase-config.js"></script>
+    <script type="module" src="/firebase/firebase-auth.js"></script>
     <script src="assets/js/new.js"></script>   
     <script src="assets/js/submenu_function.js" defer></script>
 </body>
