--- a/public/libros.html
+++ b/public/libros.html
@@ -86,6 +86,12 @@
                     <div class="libros-miniatura" data-categoria="ciencia-ficcion"></div>
                     <a href="libros.html?categoria=ciencia-ficcion" class="ver-mas">Ver todos</a>
                 </div>
+
+                <div class="categoria-item">
+                    <h3>Arte</h3>
+                    <div class="libros-miniatura" data-categoria="arte"></div>
+                    <a href="libros.html?categoria=arte" class="ver-mas">Ver todos</a>
+                </div>
         
                 <div class="categoria-item">
                     <h3>Infantil</h3>
@@ -157,6 +163,12 @@
                     <h3>Filosofía</h3>
                     <div class="libros-miniatura" data-categoria="filosofia"></div>
                     <a href="libros.html?categoria=filosofia" class="ver-mas">Ver todos</a>
+                </div>
+
+                <div class="categoria-item">
+                    <h3>Psicología</h3>
+                    <div class="libros-miniatura" data-categoria="psicologia"></div>
+                    <a href="libros.html?categoria=psicologia" class="ver-mas">Ver todos</a>
                 </div>
 
                 <div class="categoria-item">
