--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
             <img src="images/mafalda_3.png" alt="initial-image">
         </div>
         
-        <div class="cloud-text">PARA QUE TODO SEA CLARO Y SIN SORPRESAS, TE RECOMENDAMOS TENER EN CUENTA LOS DISTINTOS ESTADOS EN LOS QUE PUEDE LLEGAL SEA LA SITAR TU LIBRO, CON ESTA CLASIFICACIÓN ASIGNADA. SEA CUUACIÓN ASIGNADA PARA TU LIBRO, TODOS SON LEGIBLES Y TIENEN LA CANTIDAD DE PÁGINAS COMPLETAS</div>
+        <div class="cloud-text">PARA QUE TODO SEA CLARO Y SIN SORPRESAS, TE RECOMENDAMOS TENER EN CUENTA LOS DISTINTOS ESTADOS EN LOS QUE PUEDE LLEGAR A ESTAR TU LIBRO, CON ESTA CLASIFICACIÓN ASIGNADA. SEA CUAL SEA LA OPCIÓN ASIGNADA PARA TU LIBRO, TODOS SON LEGIBLES Y TIENEN LA CANTIDAD DE PÁGINAS COMPLETAS</div>
 
         
         <div class="circle-container">
