--- a/public/new.html
+++ b/public/new.html
@@ -79,12 +79,8 @@
     
     <div id="imageModal" class="modal">
         <span class="close-modal">&times;</span>
-        <div class="modal-content">
-            <button class="carousel-button prev">&#10094;</button>
-            <img id="modalImage" class="modal-content-img">
-            <button class="carousel-button next">&#10095;</button>
-        </div>
-        <div id="carouselCaption"></div>
+        <img class="modal-content" id="modalImage">
+        <div id="caption"></div>
     </div>
     <script type="module" src="/firebase/firebase-config.js"></script>
     <script type="module" src="/firebase/firebase-auth.js"></script>
