--- a/public/new.html
+++ b/public/new.html
@@ -79,8 +79,14 @@
     
     <div id="imageModal" class="modal">
         <span class="close-modal">&times;</span>
-        <img class="modal-content" id="modalImage">
-        <div id="caption"></div>
+        <div class="modal-content">
+            <img id="modalImage" class="modal-content-img">
+            <div id="caption"></div>
+            <div class="modal-nav">
+                <button class="modal-nav-btn prev">❮</button>
+                <button class="modal-nav-btn next">❯</button>
+            </div>
+        </div>
     </div>
     <script type="module" src="/firebase/firebase-config.js"></script>
     <script type="module" src="/firebase/firebase-auth.js"></script>
