--- a/public/new.html
+++ b/public/new.html
@@ -79,6 +79,8 @@
     
     <div id="imageModal" class="modal">
         <span class="close-modal">&times;</span>
+        <button class="modal-arrow left-arrow" aria-label="Imagen anterior">❮</button>
+        <button class="modal-arrow right-arrow" aria-label="Siguiente imagen">❯</button>
         <img class="modal-content" id="modalImage">
         <div id="caption"></div>
     </div>
