--- a/public/admin-panel/panel/admin.html
+++ b/public/admin-panel/panel/admin.html
@@ -48,13 +48,18 @@
               <option value="arte">Arte</option>
               <option value="biografias">Biografias</option>
               <option value="ciencia-ficcion">Ciencia Ficción</option>
+              <option value="cocina">Cocina</option>
               <option value="cuentos">Cuentos</option>
               <option value="ensayos">Ensayos</option>
+              <option value="idioma">Idioma</option>
               <option value="infantil">Infantil</option>
               <option value="juvenil">Juvenil</option>
               <option value="primario">Libro de Estudio(Primario)</option>
               <option value="secundario">Libro de Estudio(Secundario)</option>
               <option value="universitario">Libro de Estudio(Universitario)</option>
+              <option value="manuales">Manuales</option>
+              <option value="matematica">Matemática/economía</option>
+              <option value="medicina">Medicina</option>
               <option value="musica">Música</option>
               <option value="novela">Novela</option>
               <option value="poesia">Poesía</option>
@@ -62,6 +67,7 @@
               <option value="cultura">Religión y Cultura(Cultura)</option>
               <option value="psicologia">Religión y Cultura(Psicología)</option>
               <option value="religion">Religión y Cultura(Religión)</option>
+              <option value="revista">Revista</option>
               <option value="teatro">Teatro</option>
             </select>
           </div>
@@ -109,8 +115,30 @@
             <div class="filtros-group">
               <select id="filtro-categoria" class="filtro-select">
                 <option value="">Todas las categorías</option>
+                <option value="arte">Arte</option>
+                <option value="biografias">Biografías</option>
                 <option value="ciencia-ficcion">Ciencia Ficción</option>
+                <option value="cocina">Cocina</option>
+                <option value="cuentos">Cuentos</option>
+                <option value="ensayos">Ensayos</option>
+                <option value="idioma">Idioma</option>
                 <option value="infantil">Infantil</option>
+                <option value="juvenil">Juvenil</option>
+                <option value="primario">Libro de Estudio (Primario)</option>
+                <option value="secundario">Libro de Estudio (Secundario)</option>
+                <option value="universitario">Libro de Estudio (Universitario)</option>
+                <option value="manuales">Manuales</option>
+                <option value="matematica">Matemática/economía</option>
+                <option value="medicina">Medicina</option>
+                <option value="musica">Música</option>
+                <option value="novela">Novela</option>
+                <option value="poesia">Poesía</option>
+                <option value="historia">Religión y Cultura (Historia)</option>
+                <option value="cultura">Religión y Cultura (Cultura)</option>
+                <option value="psicologia">Religión y Cultura (Psicología)</option>
+                <option value="religion">Religión y Cultura (Religión)</option>
+                <option value="revista">Revista</option>
+                <option value="teatro">Teatro</option>
               </select>
               <select id="filtro-orden" class="filtro-select">
                 <option value="reciente">Más reciente primero</option>
