--- a/public/contacto.html
+++ b/public/contacto.html
@@ -18,7 +18,9 @@
                             <li><a href="libros.html?categoria=arte">Arte</a></li>
                             <li><a href="libros.html?categoria=biografias">Biografías</a></li>
                             <li><a href="libros.html?categoria=ciencia-ficcion">Ciencia Ficción</a></li>
+                            <li><a href="libros.html?categoria=cocina">Cocina</a></li>
                             <li><a href="libros.html?categoria=cuentos">Cuentos</a></li>
+                            <li><a href="libros.html?categoria=idioma">Idioma</a></li>
                             <li><a href="libros.html?categoria=infantil">Infantil</a></li>
                             <li><a href="libros.html?categoria=juvenil">Juvenil</a></li>
                             <li class="dropdown-submenu">
@@ -29,6 +31,9 @@
                                     <li><a href="libros.html?categoria=universitario">Universitario</a></li>
                                 </ul>
                             </li>
+                            <li><a href="libros.html?categoria=manuales">Manuales</a></li>
+                            <li><a href="libros.html?categoria=matematica">Matemática/economía</a></li>
+                            <li><a href="libros.html?categoria=medicina">Medicina</a></li>
                             <li><a href="libros.html?categoria=musica">Música</a></li>
                             <li><a href="libros.html?categoria=novela">Novela</a></li>
                             <li><a href="libros.html?categoria=poesia">Poesía</a></li>
@@ -42,7 +47,9 @@
                                     <li><a href="libros.html?categoria=religion">Religión</a></li>
                                 </ul>
                             </li>
-                            <li><a href="libros.html?categoria=teatro-ensayos">Teatro y Ensayos</a></li>
+                            <li><a href="libros.html?categoria=revista">Revista</a></li>
+                            <li><a href="libros.html?categoria=teatro">Teatro</a></li>
+                            <li><a href="libros.html?categoria=ensayos">Ensayos</a></li>
                         </ul>
                     </li>    
                     <li><a href="index.html" class="link">Inicio</a></li>
