--- a/public/libros.html
+++ b/public/libros.html
@@ -73,6 +73,7 @@
                     <div class="search-bar">
                         <input type="text" id="search-input" placeholder="Buscar libros">
                         <button id="search-button"><i class='bx bx-search'></i></button>
+                        <div id="suggestions-container" class="suggestions-dropdown"></div>
                     </div>
                 </div>
             </div>
