--- a/public/admin-panel/panel/admin.html
+++ b/public/admin-panel/panel/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <title>Panel de Administración | Librería</title>
+  <title>Panel Patria y Palabras</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="css/admin.css" />
   <script src="https://upload-widget.cloudinary.com/global/all.js"></script>
