--- a/public/libros.html
+++ b/public/libros.html
@@ -67,7 +67,7 @@
             </div>
             <div class="nav-right-container">
                 <div class="nav-phrase">
-                    Envíos gratis en Concepción del Uruguay, Colón y Villa Elisa ❤️
+                    Envíos gratis en Concepción del Uruguay y Villa Elisa ❤️
                 </div>
                 <div class="search-container">
                     <div class="search-bar">
