--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -62,7 +62,7 @@
                 <i class='bx bx-menu'></i>
             </div>
             <div class="nav-phrase">
-            Envíos gratis en Concepción del Uruguay, Colón y Villa Elisa ❤️
+            Envíos gratis en Concepción del Uruguay y Villa Elisa ❤️
             </div>
             <div class="nav-center-phrase">
             PATRIA Y PALABRAS
