--- a/public/contacto.html
+++ b/public/contacto.html
@@ -85,10 +85,10 @@
 
     <div class="recuadros-container">
         <div class="recuadro">
-            <i class='bx bxl-facebook'></i>
-            <h3>Facebook</h3>
-            <p>¡Seguinos en Facebook!</p>
-            <a href="https://www.facebook.com/profile.php?id=61574687181420" class="btn-recuadro">Visitar</a>
+            <i class='bx bxl-tiktok'></i>
+            <h3>Tiktok</h3>
+            <p>¡Seguinos en Tiktok!</p>
+            <a href="https://www.tiktok.com/@patriaypalabras" class="btn-recuadro">Visitar</a>
         </div>
         <div class="recuadro">
             <i class='bx bxl-instagram'></i>
