--- a/public/admin-panel/panel/admin.html
+++ b/public/admin-panel/panel/admin.html
@@ -106,10 +106,12 @@
 
       <div class="card">
         <div class="card-header">
-          <h2><i class="fas fa-list"></i> Libros Disponibles</h2>
-          <p id="info-libros" class="info-libros">
-            Mostrando los últimos 10 libros subidos
-          </p>
+          <div class="header-titulo-libros">
+            <h2><i class="fas fa-list"></i> Libros Disponibles</h2>
+            <p id="info-libros" class="info-libros">
+              Mostrando los últimos 10 libros subidos
+            </p>
+          </div>
           <div class="filtros-container">
             <div class="search-bar">
               <input type="text" id="search-input" placeholder="Buscar por título o autor...">
