--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gorditas:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css?v=1.0.0">
     <title>Patria y Palabras</title>
 </head>
 <body>
@@ -113,10 +113,10 @@
         </div>
     </div>
     <div class="gradient-background"></div>
-    <script type="module" src="../firebase/firebase-config.js"></script>
-    <script type="module" src="../firebase/firebase-auth.js"></script>
-    <script type="module" src="assets/js/scripts.js"></script>
-    <script type="module" src="assets/js/search.js"></script>
-    <script src="assets/js/submenu_function.js" defer></script>
+    <script type="module" src="../firebase/firebase-config.js?v=1.0.0"></script>
+    <script type="module" src="../firebase/firebase-auth.js?v=1.0.0"></script>
+    <script type="module" src="assets/js/scripts.js?v=1.0.0"></script>
+    <script type="module" src="assets/js/search.js?v=1.0.0"></script>
+    <script src="assets/js/submenu_function.js?v=1.0.0" defer></script>
 </body>
 </html>
