--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="assets/css/nosotros.css">
+    <link rel="stylesheet" href="assets/css/nosotros.css?v=1.0.0">
     <title>Nosotros - Patria y Palabras</title>
 </head>
 <body class="main-background-nosotros">
@@ -84,7 +84,7 @@
         <p>Aspiramos a tener los mejores títulos del mercado a un precio modesto. Nos parece que la lectura no tiene que ser un privilegio de pocos, porque vivir sin leer es peligroso, nos obliga a conformarnos con la vida. En un futuro, más allá de la venta de libros físicos, queremos anexar una biblioteca comunitaria virtual <strong>gratuita</strong></p>
     </div>
     <div class="box box5"></div>
-    <script src="assets/js/scripts.js"></script>   
-    <script src="assets/js/submenu_function.js" defer></script>
+    <script src="assets/js/scripts.js?v=1.0.0"></script>   
+    <script src="assets/js/submenu_function.js?v=1.0.0" defer></script>
 </body>
 </html>
