--- a/public/admin-panel/login/login.html
+++ b/public/admin-panel/login/login.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>Acceso Administrador | Librería</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="css/login.css">
-  <script type="module" src="js/login.js"></script>
+  <link rel="stylesheet" href="css/login.css?v=1.0.0">
+  <script type="module" src="js/login.js?v=1.0.0"></script>
 </head>
 <body>
   <div class="login-container">
