--- a/public/admin-panel/panel/admin.html
+++ b/public/admin-panel/panel/admin.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>Panel Patria y Palabras</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="stylesheet" href="css/admin.css" />
+  <link rel="stylesheet" href="css/admin.css?v=1.0.0" />
   <script src="https://upload-widget.cloudinary.com/global/all.js"></script>
 </head>
 <body>
@@ -168,6 +168,6 @@
     <i class="fas fa-sign-out-alt"></i> Cerrar sesión
   </button>
   <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
-  <script type="module" src="js/admin.js"></script>
+  <script type="module" src="js/admin.js?v=1.0.0"></script>
 </body>
 </html>
