--- a/public/contacto.html
+++ b/public/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="assets/css/contacto.css">
+    <link rel="stylesheet" href="assets/css/contacto.css?v=1.0.0">
     <title>Contacto - Patria y Palabras</title>
 </head>
 <body class="main-background-contacto">
@@ -109,7 +109,7 @@
             <a href="https://maps.app.goo.gl/nYywb2pobBxGE6bW6" class="btn-recuadro">Ubicación</a>
         </div>
     </div>
-    <script src="assets/js/scripts.js"></script>   
-    <script src="assets/js/submenu_function.js" defer></script>
+    <script src="assets/js/scripts.js?v=1.0.0"></script>   
+    <script src="assets/js/submenu_function.js?v=1.0.0" defer></script>
 </body>
 </html>
