--- a/public/contacto.html
+++ b/public/contacto.html
@@ -80,7 +80,10 @@
 
     <div class="texto-contacto">
         <h2>Contactate con nosotras</h2>
-        <p>Ante cualquier incomodidad o inquietud no dudes en consultarnos. ¡Estamos para ayudarte!</p>
+        <p>
+        Ante cualquier incomodidad o inquietud 
+        <span class="salto-1400">no dudes en consultarnos. ¡Estamos para ayudarte!</span>
+        </p>
     </div>
 
     <div class="recuadros-container">
