--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -19,6 +19,7 @@
                             <li><a href="libros.html?categoria=biografias">Biografías</a></li>
                             <li><a href="libros.html?categoria=ciencia-ficcion">Ciencia Ficción</a></li>
                             <li><a href="libros.html?categoria=cuentos">Cuentos</a></li>
+                            <li><a href="libros.html?categoria=ensayos">Ensayos</a></li>
                             <li><a href="libros.html?categoria=infantil">Infantil</a></li>
                             <li><a href="libros.html?categoria=juvenil">Juvenil</a></li>
                             <li class="dropdown-submenu">
@@ -29,6 +30,7 @@
                                     <li><a href="libros.html?categoria=universitario">Universitario</a></li>
                                 </ul>
                             </li>
+                            <li><a href="libros.html?categoria=medicina">Medicina</a></li>
                             <li><a href="libros.html?categoria=musica">Música</a></li>
                             <li><a href="libros.html?categoria=novela">Novela</a></li>
                             <li><a href="libros.html?categoria=poesia">Poesía</a></li>
@@ -42,7 +44,7 @@
                                     <li><a href="libros.html?categoria=religion">Religión</a></li>
                                 </ul>
                             </li>
-                            <li><a href="libros.html?categoria=teatro-ensayos">Teatro y Ensayos</a></li>
+                            <li><a href="libros.html?categoria=teatro">Teatro</a></li>
                         </ul>
                     </li>    
                     <li><a href="index.html" class="link">Inicio</a></li>
